--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stammbaumanalyse</title>
+    <link rel="stylesheet" href="static/materialize/materialize.min.css">
     <script src="static/phaser/phaser.js"></script>
 </head>
 <body>
     <h1>Stammbaumanalyse</h1>
 
+
+    <script src="static/materialize/materialize.min.js"></script>
     <script>
         var config = {
             type: Phaser.AUTO,
@@ -36,7 +39,7 @@
             this.load.image('logo', 'assets/sprites/phaser3-logo.png');
             this.load.image('red', 'assets/particles/red.png');
         }
-    
+
         function create ()
         {
             this.add.image(400, 300, 'sky');
