--- a/public/indextest.html
+++ b/public/indextest.html
@@ -11,6 +11,6 @@
     <h1>Stammbaumanalyse</h1>
 
     <script src="static/materialize/materialize.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/testmain.js"></script>
 </body>
 </html>
