--- a/public/indextest.html
+++ b/public/indextest.html
@@ -12,5 +12,12 @@
 
     <script src="static/materialize/materialize.min.js"></script>
     <script src="js/testmain.js"></script>
+    <script src="js/test_baum.js"></script>
+    <script src="js/testclass.js"></script>
+
+    <script>
+        var cls = Node()
+        node.insert("aaa");
+    </script>
 </body>
 </html>
