--- a/public/indextest.html
+++ b/public/indextest.html
@@ -15,7 +15,7 @@
     <script src="js/testclass.js"></script>
 
     <script>
-        var cls = Node()
+        var node =new Node();
         node.insert("aaa");
     </script>
 </body>
